--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@
   gap: 1em;
   position: fixed;
   z-index: 100;
-  display: none;
 }
 .login h1 {
   font-size: 2.5em;
@@ -55,7 +54,16 @@
   align-items: center;
   gap: 3em;
   padding-block: 35px;
+  opacity: 0;
+  transform: translateX(-500px);
   transition: all 1s ease;
+}
+.cuestionario .header {
+  display: flex;
+  gap: 1em;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5em;
 }
 .cuestionario .pregunta {
   box-shadow: 0px 0px 9px 0px #8b8b8b;
@@ -84,9 +92,13 @@
   position: absolute;
   top: -15px;
   left: -15px;
-  border: 3px solid #199aa5;
+  border: 2px solid #199aa5;
   border-radius: 50%;
-  font-size: 1.5em;
+  font-weight: 600;
+  font-size: 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .cuestionario .pregunta .respuestas {
   display: flex;
@@ -104,6 +116,7 @@
   width: 90%;
   padding: 0.5em 1.5em;
   border-radius: 15px;
+  cursor: pointer;
 }
 .cuestionario .pregunta .respuestas .correcta {
   border: 1px solid rgba(4, 77, 4, 0.3);
@@ -150,10 +163,23 @@
   background-image: url("hpc-low.png");
   opacity: 0;
   transition: all 5s ease;
-  z-index: 200;
+  z-index: 500;
 }
 .out * {
   font-weight: 600;
+}
+
+.loading {
+  width: 100vw;
+  height: 100vh;
+  background-color: whitesmoke;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  display: none;
+  z-index: 200;
 }
 
 .btn {
@@ -164,5 +190,5 @@
   background-color: white;
   font-size: 1em;
   cursor: pointer;
-  font-weight: 400;
+  font-weight: 600;
 }/*# sourceMappingURL=style.css.map */
