--- a/style.scss
+++ b/style.scss
@@ -26,7 +26,6 @@ html{  }
     gap: 1em;
     position: fixed;
     z-index: 100;
-    display: none;
 
     h1{
         font-size: 2.5em;
@@ -64,14 +63,21 @@ html{  }
 
 .cuestionario{
     
+    
+    .header{
+        display: flex;
+        gap: 1em;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.5em;
+    }
 
     display: flex; flex-direction: column;
     justify-content: center; align-items: center;
     gap: 3em;
     padding-block: 35px;
-    //opacity: 0;
-    // transition: opacity 2s ease;
-    //transform: translateX(-500px);
+    opacity: 0;
+    transform: translateX(-500px);
     transition: all 1s ease;
 
     .pregunta{
@@ -98,15 +104,18 @@ html{  }
             .nro{
                 background-color: white;
                 color: #199aa5;
-                
                 width: 40px;
                 height: 40px;
                 position: absolute;
                 top: -15px;
                 left: -15px;
-                border: 3px solid #199aa5;
+                border: 2px solid #199aa5;
                 border-radius: 50%;
-                font-size: 1.5em;
+                font-weight: 600;
+                font-size: 1em;
+                display: flex;
+                justify-content: center;
+                align-items: center;
             }
         }
 
@@ -125,6 +134,7 @@ html{  }
                 width: 90%;
                 padding: 0.5em 1.5em;
                 border-radius: 15px;
+                cursor: pointer;
         //box-shadow: 0px 0px 9px 0px #8b8b8b;
 
             }
@@ -212,11 +222,26 @@ html{  }
     background-image: url("hpc-low.png");
     opacity: 0;
     transition: all 5s ease;
-    z-index: 200;
+    z-index: 500;
 
     & *{
         font-weight: 600;
     }
+}
+
+.loading{
+    
+    width: 100vw;
+    height: 100vh;
+
+    background-color: whitesmoke;
+    display: flex; flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    position: fixed;
+    display: none;
+    z-index: 200;
 }
 
 
@@ -228,5 +253,6 @@ html{  }
     background-color: white;
     font-size: 1em;
     cursor: pointer;
-    font-weight: 400;
+    font-weight: 600;
 }
+
