--- a/style.css
+++ b/style.css
@@ -66,6 +66,13 @@
   align-items: center;
   font-size: 1.5em;
 }
+.cuestionario #puntaje {
+  font-weight: 100;
+}
+.cuestionario #correctas {
+  font-weight: 100;
+  margin: auto;
+}
 .cuestionario .pregunta {
   box-shadow: 0px 0px 9px 0px #8b8b8b;
   width: 90%;
