--- a/style.scss
+++ b/style.scss
@@ -64,7 +64,14 @@ html{  }
 
 .cuestionario{
     
-    
+    display: flex; flex-direction: column;
+    justify-content: center; align-items: center;
+    gap: 3em;
+    padding-block: 35px;
+    opacity: 0;
+    transform: translateX(-500px);
+    transition: all 1s ease;
+
     .header{
         display: flex;
         gap: 1em;
@@ -73,13 +80,14 @@ html{  }
         font-size: 1.5em;
     }
 
-    display: flex; flex-direction: column;
-    justify-content: center; align-items: center;
-    gap: 3em;
-    padding-block: 35px;
-    opacity: 0;
-    transform: translateX(-500px);
-    transition: all 1s ease;
+    #puntaje{
+        font-weight: 100;
+    }
+    
+    #correctas{
+        font-weight: 100;
+        margin: auto;
+    }
 
     .pregunta{
         box-shadow: 0px 0px 9px 0px #8b8b8b;
