--- a/style.scss
+++ b/style.scss
@@ -30,6 +30,9 @@ html{  }
     h1{
         font-size: 3em;
         color: #00a6c5;
+        text-decoration: underline;
+        font-style: italic;
+        text-decoration-color: #4cbcd1
     }
 
     h3{
@@ -38,7 +41,7 @@ html{  }
 
     input[type=text], input[type=email]{
 
-        height: 2em;
+        height: 2.5em;
         border: 1px solid #199aa5;
         border-radius: 1em;
         padding-inline: 1em;
