--- a/style.scss
+++ b/style.scss
@@ -8,7 +8,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
-    accent-color: #199aa5;
+    accent-color: #00a6c5;
     font-family: system-ui, sans-serif;
 }
 
@@ -32,7 +32,7 @@ html{  }
         color: #00a6c5;
         text-decoration: underline;
         font-style: italic;
-        text-decoration-color: #4cbcd1
+        //text-decoration-color: #4cbcd1
     }
 
     h3{
@@ -42,13 +42,13 @@ html{  }
     input[type=text], input[type=email]{
 
         height: 2.5em;
-        border: 1px solid #199aa5;
+        border: 1px solid #00a6c5;
         border-radius: 1em;
         padding-inline: 1em;
         outline: none;
 
         &:focus{
-            outline: 1.5px solid #199aa5;
+            outline: 1.5px solid #00a6c5;
         }
     }
 
@@ -101,7 +101,7 @@ html{  }
         .titulo{
             text-align: center;
             width: 100%;
-            background-color: #199aa5;
+            background-color: #00a6c5;
             min-height: 2.5em;
             padding: 1em;
             color: white;
@@ -115,13 +115,13 @@ html{  }
 
             .nro{
                 background-color: white;
-                color: #199aa5;
+                color: #00a6c5;
                 width: 40px;
                 height: 40px;
                 position: absolute;
                 top: -15px;
                 left: -15px;
-                border: 2px solid #199aa5;
+                border: 2px solid #00a6c5;
                 border-radius: 50%;
                 font-weight: 600;
                 font-size: 1em;
@@ -167,14 +167,14 @@ html{  }
 
                 height: 2em;
                 width: 100%;
-                border: 1px solid #199aa5;
+                border: 1px solid #00a6c5;
                 border-radius: 1em;
                 padding-inline: 1em;
                 outline: none;
                 text-align: center;
         
                 &:focus{
-                    outline: 1.5px solid #199aa5;
+                    outline: 1.5px solid #00a6c5;
                 }
             }
 
@@ -258,10 +258,10 @@ html{  }
 
 
 .btn{
-    padding: .5em 1.5em;
-    border: 2px solid #199aa5;
+    padding: 0.5em 3em;
+    border: 2px solid #00a6c5;
     border-radius: 1em;
-    color: #199aa5;
+    color: #00a6c5;
     background-color: white;
     font-size: 1em;
     cursor: pointer;
