--- a/style.css
+++ b/style.css
@@ -15,12 +15,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 2.5em;
+  gap: 3.5em;
   position: fixed;
   z-index: 100;
 }
 .login h1 {
-  font-size: 3em;
+  font-size: 3.5em;
   color: #00a6c5;
   text-decoration: underline;
   font-style: italic;
@@ -29,7 +29,7 @@
   font-weight: 400;
 }
 .login input[type=text], .login input[type=email] {
-  height: 2.5em;
+  height: 3em;
   border: 1px solid #00a6c5;
   border-radius: 1em;
   padding-inline: 1em;
@@ -51,15 +51,22 @@
 }
 
 .cuestionario {
+  padding-block: 35px;
+  opacity: 0;
+  transform: translateX(-500px);
+  transition: all 1s ease;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 3em;
-  padding-block: 35px;
-  opacity: 0;
-  transform: translateX(-500px);
-  transition: all 1s ease;
+}
+.cuestionario .paso {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 3em;
 }
 .cuestionario .header {
   display: flex;
@@ -93,6 +100,7 @@
   font-size: 0.95em;
   position: relative;
   border-radius: 15px 15px 0 0;
+  min-height: 85px;
 }
 .cuestionario .pregunta .titulo .nro {
   background-color: white;
@@ -201,4 +209,12 @@
   font-size: 1em;
   cursor: pointer;
   font-weight: 600;
+}
+.btn:hover {
+  background-color: #00a6c5;
+  color: white;
+}
+
+.oculto {
+  display: none;
 }/*# sourceMappingURL=style.css.map */
